--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,13 +1,13 @@
 # Name of your application. Used to uniquely configure containers.
-service: react_starter_kit
+service: library-management
 
 # Name of the container image (use your-user/app-name on external registries).
-image: react_starter_kit
+image: aalvaaro/library-management
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 64.225.113.161
 
   # Uncomment to enable SSR:
   # vite_ssr:
@@ -29,21 +29,21 @@ servers:
 #
 # Don't use this when deploying to multiple web servers (then you have to terminate SSL at your load balancer).
 #
-# proxy:
-#   ssl: true
-#   host: app.example.com
+proxy:
+  ssl: true
+  host: books.alvarodelgado.dev
 
 # Where you keep your container images.
 registry:
   # Alternatives: hub.docker.com / registry.digitalocean.com / ghcr.io / ...
-  server: localhost:5555
+  server: registry.digitalocean.com
 
   # Needed for authenticated registries.
-  # username: your-user
+  username: aalvaaro
 
   # Always use an access token rather than real password when possible.
-  # password:
-  #   - KAMAL_REGISTRY_PASSWORD
+  password:
+    - KAMAL_REGISTRY_PASSWORD
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
@@ -83,7 +83,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "react_starter_kit_storage:/rails/storage"
+  - "library-management-storage:/rails/storage"
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
@@ -97,17 +97,17 @@ builder:
   arch: amd64
   # Uncomment to enable SSR:
   # dockerfile: Dockerfile-ssr
-  cache:
-    type: registry
-    image: your-user/react_starter_kit-build-cache
-    options: mode=max
+  # cache:
+  #   type: registry
+  #   image: aalvaar0/tasting-app-cache
+  #   options: mode=max
 
   # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
   # remote: ssh://docker@docker-builder-server
   #
   # # Pass arguments and secrets to the Docker build process
   # args:
-  #   RUBY_VERSION: ruby-3.4.8
+  #   RUBY_VERSION: ruby-3.4.5
   # secrets:
   #   - GITHUB_TOKEN
   #   - RAILS_MASTER_KEY
